--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,10 @@ nav a {
 nav .logo {
   margin-right: auto;
 }
+label {
+  display: block;
+  margin-bottom: .2em;
+}
 footer {
   display: block;
   text-align: center;
@@ -34,4 +38,8 @@ footer {
   margin-top: 60px;
   color: #777;
   border-top: 1px solid #eaeaea;
+}
+.request-button {
+  color: white;
+  background-color: rgb(7, 107, 20);
 }
