--- a/styles/global.css
+++ b/styles/global.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
 body {
-  background: #f2f2f2;
-  color: #333;
+  background: #B583E7; 
+  color:  #1F0A33;
   font-family: "Nunito";
 }
 a {
-  color: #333;
+  color: #1F0A33;
   text-decoration: none;
 }
 .content {
@@ -22,6 +22,7 @@ nav {
   border-bottom: 1px solid #ddd;
 }
 nav a {
+  color: #1F0A33;
   margin-left: 12px;
 }
 nav .logo {
@@ -31,15 +32,14 @@ label {
   display: block;
   margin-bottom: .2em;
 }
-footer {
+.footer {
   display: block;
   text-align: center;
   padding: 30px 0;
   margin-top: 60px;
-  color: #777;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid #1F0A33;
 }
-.request-button {
+/*.request-button {
   color: white;
   background-color: rgb(7, 107, 20);
-}
+}*/
